# Parking-lot-line-detection

./: CMakeLists.txt  README.md  detectslot.cpp  detectslot.h  gdc_ldw.ini  main.cpp
lib/: libiniparser.so.1
